Release Notes, see ChangeLog for a detailed list of changes.

0.4.0, 2008-xx-xx

* Again some API changes for kaa.notifier. Please read
  API_CHANGES.txt for details. The API should be stable now.
* synchronized decorator

0.3.0, 2008-02-04

* API changes for kaa.notifier. Please read API_CHANGES.txt for
  details. All classes from kaa.notifier are now in the kaa
  namespace and yield_execution has changed.
* Add new native twisted notifier
* Small kaa.rpc improvements
* Bugfixes


0.2.0, 2007-12-22

* kaa.config cosmetic updates for the config file
* Remove Python distutils requirement for runtime
* pyNotifier updates
* kaa.db enhancements using new schema
* AtTimer for kaa.notifier
* Twisted mainloop support
* Support to run kaa.notifier in a different mainloop
* Bugfixes


0.1.3, 2007-04-18

* support for Python 2.5
* remove libxml2 dependency and kaa.xml wrapper
* add xmlutils
* add svn2log ChangeLog generator
* Bugfixes