@@ -60,3 +60,6 @@ from coroutine import NotFinished, coroutine
 
 # process management
 from popen import Process
+
+# special glib thread support
+from glib import GOBJECT, gobject_set_threaded
