@@ -5,6 +5,8 @@ Release Notes, see ChangeLog for a detailed list of changes.
 * Again some API changes for kaa.notifier. Please read
   API_CHANGES.txt for details. The API should be stable now.
 * synchronized decorator
+* Support to run a glib mainloop in an extra thread
+
 
 0.3.0, 2008-02-04
 
